@@ -33,7 +33,7 @@ public class ItemCountListener implements ChunkListener {
         // If the number of records processed so far is a multiple of the logging
         // interval then output a log message.
         if (count > 0 && count % loggingInterval == 0) {
-            LOGGER.info(fmt.format(new Object[] { new Integer(count) }));
+            LOGGER.info(fmt.format(new Object[] { Integer.valueOf(count) }));
         }
     }
 
